# kongming

./: .gitignore  ai_model.json  algo_animation.html  api.json  build-windows.bat  gen_algo_animation.py  gen_algo_html.py  gen_attribution.py  gen_chart.py  gen_corrected_html.py  gen_rebalance_html.py  ingest_to_sqlite.py  migrate_db.py  restart-windows.bat  run_time_period.py  run_time_period_corrected.py  run_time_period_exp.py  run_time_period_rebalance.py  start-windows.bat  stop-windows.bat  再平衡效果报告.html  切量策略报告.html  客户跑量调整示意图.html  资源模型监控数据接口使用文档.md
backend/: .gitignore  README.md  pyproject.toml  run.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/algorithms/: __init__.py  _shared.py  base.py  cluster_redundancy.py  demand_evaluation_solver.py  realtime_solver.py  snapshot.py  time_period_solver.py  usage_demand_source.py
backend/app/api/: __init__.py  dashboards.py  demands.py  docs.py  evaluations.py  fittings.py  health.py  jobs.py  monitor.py  policies.py  revenues.py  sync.py  vendors.py  watched_clusters.py
backend/app/integrations/: __init__.py  billing_client.py  crm_client.py  filing_platform_client.py  resource_client.py  (+3 more)
backend/scripts/: db_query.py  fetch_resource_monitor_data.py  ingest_api_json.py  ingest_consumers_from_excel.py  ingest_platform_inputs.py  ingest_tmp_data.py  ingest_usage.py  migrate_consumer_to_user_id.py  migrate_customers_to_consumers.py  migrate_policy_scenario.py  migrate_watched_dedicated.py  run_time_period_policy.py  run_wave_fitting.py  split_cluster_to_consumers.py
backend/tests/: conftest.py
(+158 files in other folders)
