[project]
name = "kongming-backend"
version = "0.1.0"
description = "Kongming AI gateway operation platform backend"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "SQLAlchemy>=2.0",
    "APScheduler>=3.10",
    "pydantic>=2.6",
    "python-dateutil>=2.9",
    "structlog>=24.1",
    "flask-swagger-ui>=4.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
algo = [
    "scipy>=1.13",
    "pulp>=2.8",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["instance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
